IF( WANT_DOCS )
  # Builds the documentation.
  FIND_PACKAGE( Sphinx REQUIRED )
  FIND_PACKAGE( Doxygen REQUIRED )

  SET( SPHINX_SOURCE_DIR ${CMAKE_SOURCE_DIR}/docs/sphinx )
  SET( DOCUMENTATION_DIR ${OpenMW_BINARY_DIR}/docs )

  FILE(MAKE_DIRECTORY ${DOCUMENTATION_DIR}/_static)
  FILE(MAKE_DIRECTORY ${DOCUMENTATION_DIR}/_templates)

  CONFIGURE_FILE(
    ${SPHINX_SOURCE_DIR}/source/conf.py.in
    ${DOCUMENTATION_DIR}/conf.py
    @ONLY)

  CONFIGURE_FILE(
    ${SPHINX_SOURCE_DIR}/run_sphinx_build.sh.in
    ${DOCUMENTATION_DIR}/run_sphinx_build.sh
    @ONLY)

  IF(UNIX)
    EXECUTE_PROCESS(COMMAND chmod +x ${DOCUMENTATION_DIR}/run_sphinx_build.sh OUTPUT_QUIET)
    EXECUTE_PROCESS(COMMAND ${DOCUMENTATION_DIR}/run_sphinx_build.sh OUTPUT_QUIET)
  ENDIF(UNIX)

ENDIF()
